cmake_minimum_required (VERSION 3.0)
set(APPNAME gbSrv)
project(${APPNAME})
add_subdirectory( thirdparty )
add_definitions( "-Wall -g" )
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/libexosip2-5.2.0/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/libosip2-5.2.0//include)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src DIR_SRCS)
link_directories(${PROJECT_BINARY_DIR}/thirdparty/lib)
add_executable(${APPNAME} ${DIR_SRCS})
add_dependencies(${APPNAME} libexosip2-5.2)
add_dependencies(${APPNAME} libosip2-5.2)
message(${PROJECT_BINARY_DIR}/thirdparty/lib)
target_link_libraries(${APPNAME} eXosip2 osip2 osipparser2 pthread)
foreach(f IN LISTS DIR_SRCS)
    get_filename_component(b ${f} NAME)
    set_source_files_properties(${f} PROPERTIES
    COMPILE_DEFINITIONS "__FILENAME__=\"${b}\"")
endforeach()